--- a/frontend/elderly.html
+++ b/frontend/elderly.html
@@ -104,7 +104,7 @@
     <div class="toast-container" id="toastContainer"></div>
 
     <script src="app.js"></script>
-    <script src="chat.js"></script>
+    <script src="chat.js?v=2"></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             // Initialize chat for elderly
