--- a/frontend/tourist.html
+++ b/frontend/tourist.html
@@ -211,49 +211,53 @@
 
           <!-- City Selection -->
           <div class="form-group">
-            <label for="destinationInput">📍 City/Destination</label>
-            <input type="text" id="destinationInput" class="form-input"
+            <label for="destinationInput" data-i18n="cityDestination">📍 City/Destination</label>
+            <input type="text" id="destinationInput" class="form-input" data-i18n-placeholder="enterDestination"
               placeholder="Enter destination (e.g. Bengaluru, Mysore, Goa)" />
           </div>
 
           <!-- Number of People -->
           <div class="form-group">
-            <label for="numPeople">👥 Number of People</label>
+            <label for="numPeople" data-i18n="numberPeople">👥 Number of People</label>
             <input type="number" id="numPeople" class="form-input" min="1" max="50" value="2"
-              placeholder="Enter number of people" />
+              data-i18n-placeholder="enterPeople" placeholder="Enter number of people" />
           </div>
 
           <!-- Number of Days -->
           <div class="form-group">
-            <label for="numDays">📅 Number of Days</label>
+            <label for="numDays" data-i18n="numberOfDays">📅 Number of Days</label>
             <input type="number" id="numDays" class="form-input" min="1" max="30" value="2"
-              placeholder="Enter number of days" />
+              data-i18n-placeholder="enterDays" placeholder="Enter number of days" />
           </div>
 
           <!-- Interests -->
           <div class="form-group">
-            <label>🎨 Interests (Select multiple)</label>
+            <label data-i18n="interestsSelect">🎨 Interests (Select multiple)</label>
             <div style="display: flex; flex-wrap: wrap; gap: 10px; margin-top: 5px;">
               <label
                 style="display: flex; align-items: center; cursor: pointer; background: rgba(255,255,255,0.08); padding: 8px 12px; border-radius: 20px; border: 1px solid rgba(245, 158, 11, 0.2);">
-                <input type="checkbox" name="interest" value="Heritage" style="margin-right: 6px;"> Heritage
+                <input type="checkbox" name="interest" value="Heritage" style="margin-right: 6px;"> <span
+                  data-i18n="heritage">Heritage</span>
               </label>
               <label
                 style="display: flex; align-items: center; cursor: pointer; background: rgba(255,255,255,0.08); padding: 8px 12px; border-radius: 20px; border: 1px solid rgba(245, 158, 11, 0.2);">
-                <input type="checkbox" name="interest" value="Food" style="margin-right: 6px;"> Food
+                <input type="checkbox" name="interest" value="Food" style="margin-right: 6px;"> <span
+                  data-i18n="food">Food</span>
               </label>
               <label
                 style="display: flex; align-items: center; cursor: pointer; background: rgba(255,255,255,0.08); padding: 8px 12px; border-radius: 20px; border: 1px solid rgba(245, 158, 11, 0.2);">
                 <input type="checkbox" name="interest" value="Adventure" id="interestAdventure"
-                  style="margin-right: 6px;"> Adventure
+                  style="margin-right: 6px;"> <span data-i18n="adventure">Adventure</span>
               </label>
               <label
                 style="display: flex; align-items: center; cursor: pointer; background: rgba(255,255,255,0.08); padding: 8px 12px; border-radius: 20px; border: 1px solid rgba(245, 158, 11, 0.2);">
-                <input type="checkbox" name="interest" value="Nature" style="margin-right: 6px;"> Nature
+                <input type="checkbox" name="interest" value="Nature" style="margin-right: 6px;"> <span
+                  data-i18n="nature">Nature</span>
               </label>
               <label
                 style="display: flex; align-items: center; cursor: pointer; background: rgba(255,255,255,0.08); padding: 8px 12px; border-radius: 20px; border: 1px solid rgba(245, 158, 11, 0.2);">
-                <input type="checkbox" name="interest" value="Shopping" style="margin-right: 6px;"> Shopping
+                <input type="checkbox" name="interest" value="Shopping" style="margin-right: 6px;"> <span
+                  data-i18n="shopping">Shopping</span>
               </label>
             </div>
           </div>
@@ -262,13 +266,13 @@
           <div class="form-group">
             <label style="display: flex; align-items: center; cursor: pointer;">
               <input type="checkbox" id="elderlyTravelers" style="margin-right: 10px; width: auto; cursor: pointer;" />
-              <span>👴 Traveling with elderly people</span>
+              <span data-i18n="travelElderly">👴 Traveling with elderly people</span>
             </label>
           </div>
 
           <!-- Transport Preference -->
           <div class="form-group">
-            <label for="transportPreference">🚗 Transport Preference</label>
+            <label for="transportPreference" data-i18n="transportPref">🚗 Transport Preference</label>
             <select id="transportPreference" class="form-input">
               <option value="flexible">Flexible (Mix of options)</option>
               <option value="public">Public Transit (Bus, Metro)</option>
@@ -278,19 +282,21 @@
 
           <!-- Budget -->
           <div class="form-group">
-            <label for="budget">💰 Budget per Person (₹)</label>
+            <label for="budget" data-i18n="budgetPerPerson">💰 Budget per Person (₹)</label>
             <input type="number" id="budget" class="form-input" min="500" step="500" value="3000"
-              placeholder="Enter budget per person per day" />
-            <small style="color: #a1a1aa; font-size: 0.85em; margin-top: 5px; display: block;">
+              data-i18n-placeholder="budgetPerPerson" placeholder="Enter budget per person per day" />
+            <small style="color: #a1a1aa; font-size: 0.85em; margin-top: 5px; display: block;"
+              data-i18n="dailyBudgetNote">
               💡 Daily budget including food, transport, and entry fees
             </small>
           </div>
 
           <!-- Generate Button -->
-          <button id="generateItineraryBtn" class="btn btn--primary" style="width: 100%; margin-top: 15px">
+          <button id="generateItineraryBtn" class="btn btn--primary" style="width: 100%; margin-top: 15px"
+            data-i18n="generateItinerary">
             ✨ Generate Itinerary
           </button>
-          <p class="text-muted text-center" style="font-size: 0.85em; margin-top: 10px">
+          <p class="text-muted text-center" style="font-size: 0.85em; margin-top: 10px" data-i18n="itineraryResults">
             💡 We'll create a perfect itinerary based on your preferences
           </p>
         </div>
@@ -345,11 +351,19 @@
   <!-- Toast Container -->
   <div class="toast-container" id="toastContainer"></div>
 
-  <script src="app.js"></script>
-  <script src="chat.js"></script>
+  <script src="app.js?v=2"></script>
+  <script src="chat.js?v=2"></script>
   <script>
     // Tourist-specific initialization
     const API_BASE_URL = "http://127.0.0.1:8000";
+
+    document.addEventListener("DOMContentLoaded", () => {
+      // Force init if not already running
+      if (window.TravelAssistant && window.TravelAssistant.init) {
+        console.log("Forcing TravelAssistant init from tourist page");
+        window.TravelAssistant.init();
+      }
+    });
 
     // Helper function to convert markdown-style text to HTML
     function convertMarkdownToHtml(text) {
@@ -401,6 +415,9 @@
           headers["Authorization"] = `Bearer ${authToken}`;
         }
 
+        // Get current language
+        const currentLanguage = window.TravelAssistant?.state?.language || localStorage.getItem("travel_assistant_language") || "en";
+
         const response = await fetch(`${API_BASE_URL}/tourist/itinerary`, {
           method: "POST",
           headers: headers,
@@ -411,7 +428,8 @@
             elderly_travelers: elderlyTravelers,
             transport_preference: transportPreference,
             budget_per_person: parseInt(budget),
-            interests: selectedInterests // Pass selected interests
+            interests: selectedInterests,
+            language: currentLanguage
           }),
         });
 
