Before frontend update

--- a/frontend/history.html
+++ b/frontend/history.html
@@ -414,6 +414,12 @@
           </button>
           <button
             class="btn btn-secondary"
+            onclick="window.location.href = 'index.html'"
+          >
+            🏠 Home
+          </button>
+          <button
+            class="btn btn-secondary"
             onclick="window.location.href = 'itineraries.html'"
           >
             🗺️ Itineraries
